# OpenFlo

./: .gitignore  README.md  requirements.txt
.claude/: settings.local.json
data/online_tasks/: Online_Mind2Web.json  (+1 more)
docs/: index.html  style.css
src/: example.py  pyproject.toml  run_agent.py
src/avenir_ux/agent/: agent.py  config.py  evaluation.py  executor.py  predictor.py  reporting.py
src/avenir_ux/browser/: dom.py  helper.py
src/avenir_ux/llm/: engine.py
src/avenir_ux/managers/: checklist.py  ux_synthesis.py
src/avenir_ux/prompts/: format.py  utils.py
src/avenir_ux/utils/: image.py  reasoning.py
src/avenir_ux/ux/: __init__.py  metrics_evaluator.py  report_generator.py  seq_scorer.py  sus_calculator.py  trajectory_logger.py
src/config/: auto_mode.toml  persona.toml
src/openflo/: log
src/openflo/agent/: agent.py  config.py  evaluation.py  executor.py  predictor.py  reporting.py  ui_analysis.py
src/openflo/llm/: engine.py
src/openflo/managers/: checklist.py  ux_synthesis.py
src/openflo/personas/: profile.py
src/openflo/prompts/: templates.py  utils.py  ux_templates.py
src/openflo/utils/: reasoning.py
src/openflo/ux/: __init__.py  dom_hasher.py  metrics_evaluator.py  report_generator.py  seq_scorer.py  sus_calculator.py  trajectory_logger.py
src/seeact/agent/: agent.py  config.py  evaluation.py  executor.py  predictor.py  reporting.py
src/seeact/browser/: recovery.py
src/seeact/llm/: engine.py
src/seeact/managers/: checklist.py
src/seeact/prompts/: utils.py
src/seeact/utils/: checklist.py  reasoning.py
