[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "avenir-ux"
version = "0.2.9.0"
description = "Avenir-UX is an open-source web automation framework powered by large multimodal models."
authors = [
{name = "UCL Nexus Labs"}
]
license = {file="LICENSE"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "backoff",
    "playwright",
    "toml",
    "httpx==0.27.2",
    "litellm==1.35.32",
    "python-dotenv"
]
